--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -88,7 +88,7 @@
         <div id="_consentContainer">{{consent_fields(consent_agreements)}}</div>
     {%- endif -%}
 </form>
-<a id="redirectLink" href="">&nbsp;</a>
+<a id="redirectLink" href="" class="tnth-hide">&nbsp;</a>
 {{accountCreationScript()}}
 {% endblock %}
 {% block footer %}
