--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -167,14 +167,14 @@
         <div class="col-md-5 col-xs-8">
           <div class="form-group float-input-label">
             <label>Name</label>
-            <input class="form-control float-text init-queries-field" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" type="text" required="required" data-error="{{ _('First name is required') }}"  />
+            <input class="form-control float-text init-queries-field" id="firstname" name="firstname" aria-label="{{_('First name')}}" placeholder="{{ _('First Name') }}" type="text" required="required" data-error="{{ _('First name is required') }}"  />
             <div class="help-block with-errors"></div>
           </div>
         </div>
         <div class="col-md-5 col-xs-8">
           <div class="form-group float-input-label">
             <label>&nbsp;</label>
-            <input class="form-control float-text init-queries-field" id="lastname" name="lastname" placeholder="{{ _('Last Name') }}" type="text" required="required" data-error="{{ _('Last name is required') }}" />
+            <input class="form-control float-text init-queries-field" id="lastname" name="lastname" aria-label="{{_('Last name')}}" placeholder="{{ _('Last Name') }}" type="text" required="required" data-error="{{ _('Last name is required') }}" />
             <div class="help-block with-errors"></div>
           </div>
         </div>
@@ -217,10 +217,10 @@
             <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">{{_("(optional)")}}</span></label>
             <div class="row">
               <div class="col-md-4 col-xs-8">
-                <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The birth day field is required and must be valid format')}}"  data-trigger-event="change" required />
+                <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" aria-label="{{_('Birth date')}} placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The birth day field is required and must be valid format')}}"  data-trigger-event="change" required />
               </div>
               <div class="col-md-4 col-xs-8">
-                <select data-type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" id="month" data-error="{{_('A birth month must be selected')}}" data-trigger-event="change" required>
+                <select data-type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" aria-label="{{_('Birth month')}}" id="month" data-error="{{_('A birth month must be selected')}}" data-trigger-event="change" required>
                   <option value="">{{ _("Month") }}...</option>
                   <option value="01">{{ _("January") }}</option>
                   <option value="02">{{ _("February") }}</option>
@@ -237,7 +237,7 @@
                 </select>
               </div>
               <div class="col-md-4 col-xs-8">
-                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-trigger-event="change" data-error="{{_('The birth year is required and must be in valid format')}}" required />
+                <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" aria-label="Birth year" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-trigger-event="change" data-error="{{_('The birth year is required and must be in valid format')}}" required />
               </div>
             </div>
             <div class="help-block with-errors" style="margin-top: 1em; padding-left: 1em"></div>
