--- a/portal/templates/patient_profile_create.html
+++ b/portal/templates/patient_profile_create.html
@@ -25,7 +25,7 @@
                         <label for="email">{{ _("Email Address") }}</label>
                         <input type="text" class="form-control" id="email" name="email" autocomplete="off" placeholder="{{ _('Email Address') }}" value="" data-customemail="true" required />
                         <div id="noEmailContainer">
-                            <input type="checkbox" id="noEmail" class="text-muted">&nbsp;&nbsp;<span class="text-muted">{{_("User does not have email address")}}</span>
+                            <input type="checkbox" id="noEmail" aria-label="{{_('No email')}}" class="text-muted">&nbsp;&nbsp;<span class="text-muted">{{_("User does not have email address")}}</span>
                         </div>
                         <div class="help-block with-errors" id="erroremail"></div>
                     </div>
@@ -93,7 +93,7 @@
     {%- if consent_agreements -%}<div id="_consentContainer">{{consent_fields(consent_agreements)}}</div>
     {%- endif -%}
 </form>
-<a id="redirectLink" href="">&nbsp;</a>
+<a id="redirectLink" href="" name="redirectLink" arial-label="{{_('Redirect link')}}" class="tnth-hide">&nbsp;</a>
 {{accountCreationScript()}}
 {% endblock %}
 {% block footer %}
