--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -95,8 +95,8 @@
         {%- endwith %}
     {% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-<script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.min.js"></script>
-<script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.min.js"></script>
+<script src="https://unpkg.com/i18next-xhr-backend@1.4.3/i18nextXHRBackend.min.js"></script>
+<script src="https://unpkg.com/i18next-browser-languagedetector@2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.1/js/bootstrap-datepicker.min.js" async></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
