--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -116,64 +116,53 @@
     &nbsp;
     <a href="{%-if config.MOVEMER_LINK_URL-%}{{config.MOVEMER_LINK_URL}}{%-endif-%}" class="logo-link" title="{{ _('Movember') }}" target="_blank">
     {%-if white_theme -%}<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/Movember-Footer-Logo.png')}}" alt="{{_('Movember Logo')}}" />{%-else-%}<img src="{{PORTAL}}{{url_for('static',filename='img/movember_logo.jpg')}}" alt="Movember Logo"/>{%-endif-%}</a>
-    <script>
-    $(function() {
-      $(".logo-link").each(function() {
-          if (! hasValue($.trim($(this).attr("href")))) {
-              $(this).removeAttr("target");
-              $(this).on("click", function(e) {
-                e.preventDefault();
-                return false;
-              });
-          };
-      });
-    });
-    </script>
 {%- endmacro %}
 {% macro copyright_text(user) -%}
      <script>
         $(document).ready(function() {
-            var __countryCode = "";
-            var footerElements = "footer .copyright, #homeFooter .copyright, .footer-container .copyright";
-            var getContent = function(cc) {
-                  var content = "";
-                  switch(String(cc.toUpperCase())) {
-                      case "US":
-                      case "EN_US":
-                        content = "&copy; 2017 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization (Movember Foundation).";
-                        break;
-                      case "AU":
-                      case "EN_AU":
-                        content = "&copy; 2017 Movember Foundation. All rights reserved. Movember Foundation is a registered charity in Australia ABN 48894537905 (Movember Foundation).";
-                        break;
-                      case "NZ":
-                      case "EN_NZ":
-                        content = "&copy; 2017 Movember Foundation. All rights reserved. Movember Foundation is a New Zealand registered charity number CC51320 (Movember Foundation).";
-                        break;
-                      default:
-                        content = "&copy; 2017 Movember Foundation (Movember Foundation). All rights reserved.";
+            setTimeout(function() {
+              var __countryCode = "";
+              var footerElements = "footer .copyright, #homeFooter .copyright, .footer-container .copyright";
+              var getContent = function(cc) {
+                    var content = "";
+                    switch(String(cc.toUpperCase())) {
+                        case "US":
+                        case "EN_US":
+                          content = "&copy; 2017 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization (Movember Foundation).";
+                          break;
+                        case "AU":
+                        case "EN_AU":
+                          content = "&copy; 2017 Movember Foundation. All rights reserved. Movember Foundation is a registered charity in Australia ABN 48894537905 (Movember Foundation).";
+                          break;
+                        case "NZ":
+                        case "EN_NZ":
+                          content = "&copy; 2017 Movember Foundation. All rights reserved. Movember Foundation is a New Zealand registered charity number CC51320 (Movember Foundation).";
+                          break;
+                        default:
+                          content = "&copy; 2017 Movember Foundation (Movember Foundation). All rights reserved.";
 
-                  };
-                  return content;
+                    };
+                    return content;
 
-            };
-            {%- if user and user.locale_code-%}
-              __countryCode = "{{user.locale_code}}";
-              if (__countryCode) {
-                  $(footerElements).html(getContent("{{user.locale_code}}"));
               };
-            {%- endif -%}
-            if (!__countryCode) {
-                $.getJSON('//freegeoip.net/json/?callback=?', function(data) {
-                  if (data && data.country_code) {
-                      //country code
-                      //Australia AU
-                      //New Zealand NZ
-                      //USA US
-                     $(footerElements).html(getContent(data.country_code));
-                  } else $(footerElements).html(getContent());
-                });
-            };
+              {%- if user and user.locale_code-%}
+                __countryCode = "{{user.locale_code}}";
+                if (__countryCode) {
+                    $(footerElements).html(getContent("{{user.locale_code}}"));
+                };
+              {%- endif -%}
+              if (!__countryCode) {
+                  $.getJSON('//freegeoip.net/json/?callback=?', function(data) {
+                    if (data && data.country_code) {
+                        //country code
+                        //Australia AU
+                        //New Zealand NZ
+                        //USA US
+                       $(footerElements).html(getContent(data.country_code));
+                    } else $(footerElements).html(getContent());
+                  });
+              };
+            }, 500);
         });
       </script>
 {%- endmacro %}
