--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1,11 +1,7 @@
 {% from "initial_queries_macros.html" import patientQGroup, consent_fields %}
 
 {% macro profileImage(person) -%}
-    {% if person and person.image_url %}
-        <div class="profile-img hidden-xs">
-            <img src="{{ person and person.image_url }}" />
-        </div>
-    {% endif %}
+    {% if person and person.image_url %}<div class="profile-img hidden-xs"><img src="{{ person and person.image_url }}" /></div>{% endif %}
 {%- endmacro %}
 
 {% macro profileBirthDate(person) -%}
@@ -13,8 +9,7 @@
     <div class="form-group profile-section" id="bdGroup">
         <label id="birthdateLabel" class="profile-birthdate-label">{{ _("Birth Date") }}</label>
         <div class="flex">
-            <div class="flex-item" id="bdDateContainer" data-loader-container="true">
-                <input class="form-control bd-element" id="date" aria-label="{{_('Birth Date')}}" name="birthdayDate" placeholder="DD" type="text" pattern="(\d)?\d" maxlength="2" data-error="{{_('Birth date must be valid and in the required format.')}}" data-error-field="errorbirthday" autocomplete="off" data-trigger-event="change" required />
+            <div class="flex-item" id="bdDateContainer" data-loader-container="true"><input class="form-control bd-element" id="date" aria-label="{{_('Birth Date')}}" name="birthdayDate" placeholder="DD" type="text" pattern="(\d)?\d" maxlength="2" data-error="{{_('Birth date must be valid and in the required format.')}}" data-error-field="errorbirthday" autocomplete="off" data-trigger-event="change" required />
             </div>
             <div class="flex-item" id="bdMonthContainer" data-loader-container="true">
                 <select class="form-control bd-element" aria-label="{{_('Birth Month')}}" name="birthdayMonth" id="month" data-error="{{_('Birth date must be valid and in the required format.')}}" data-error-field="errorbirthday" data-trigger-event="change" required>
@@ -771,7 +766,10 @@
             leafOrgs = {% if current_user.leaf_organizations() %} {{current_user.leaf_organizations() | safe}} {% else %} false {% endif %};
         {% endif %}
         $(function () {
-            setTimeout(function() { tnthAjax.getOrgs({{ person.id if person }}, false, false, _handleOrgs);}, 500);
+            setTimeout(function() { tnthAjax.getOrgs({{ person.id if person }}, false, false,
+                function() {
+                    tnthAjax.getDemo({{ person.id if person }}, false, false, _handleOrgs);
+                });}, 500);
         });
 
         function _handleOrgs() {
