--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -32,17 +32,50 @@
 }
 .watermark, .watermark-nowrapper {
   position: absolute;
-  top: 0;
+  top: 14%;
   right: 0;
-  color: #603b00;
   z-index: 1000;
   font-weight: normal;
   font-size: 0.85em;
   text-align: center;
   width: 100%;
-  background-color: #eeab50;
+  max-width: 100%;
+  font-size: 0.5em;
   letter-spacing: 1px;
   text-transform: capitalize;
+  padding: 1em;
+  background-color: transparent;
+  color: #FFF;
+}
+.watermark-nowrapper {
+  font-size: 0.7em;
+  top: 0;
+  color: #603b00;
+  background-color: #eeab50;
+  padding: 0.1em 0;
+}
+@media (min-width: 641px) {
+   .watermark, .watermark-nowrapper {
+      font-size: 0.7em;
+      top: 0;
+    }
+    .watermark {
+      width: 270px;
+    }
+}
+@media (min-width: 992px) {
+  .watermark {
+    color: #603b00;
+    background-color: #eeab50;
+    padding: 0;
+    width: 100%;
+    font-size: 0.85em;
+  }
+  .watermark-nowrapper {
+    padding: 0;
+    width: 100%;
+    font-size: 0.85em;
+  }
 }
 .tnth-white {
   color: #ECF7E5;
@@ -138,16 +171,23 @@
 #tnthLogoXs {
   padding: 0;
   display: inline-block;
-  margin: auto;
+  width: 100px;
   max-width: 100%;
+  margin-left: 2em;
   img {
     height: 40px;
     float: right;
   }
 }
-@media (min-width: 699px) {
+@media (min-width: 400px) {
   #tnthLogoXs {
-    width: 250px;
+    margin-left: 4em;
+  }
+}
+@media (min-width: 417px) {
+  #tnthLogoXs {
+    margin: auto;
+    display: block;
   }
 }
 #tnthTopLinks {
@@ -183,8 +223,13 @@
   }
 }
 #tnthUserBtn {
-  padding: 0 14px 0 0;
-  height: inherit;
+padding: 0 6px;
+}
+@media (min-width: 992px) {
+  #tnthUserBtn {
+    padding: 0 14px 0 0;
+    height: inherit;
+  }
 }
 #tnthHomeBtn {
   background-image: url('../img/fa_home_ffffff.png');
@@ -360,60 +405,41 @@
   margin: 0 auto;
 }
 /** Responsive sizes **/
-
-@media (max-width: 498px) {
-  #tnthLogoXs{
-    display: inline-block;
-    margin: auto;
-  }
-  .tnth-navbarXs-img-container img {
-    width: 25% !important;
-  } 
+.tnth-navbarXs-img-container img  {
+  width: 25%;
+  margin: 0;
 }
-@media (max-width: 640px) {
-   .watermark {
-    width: 50% !important;
-    max-width: 100% !important;
-    font-size: 0.5em !important;
-    top: 9%;
-  }
+@media (min-width: 499px) {
   .tnth-navbarXs-img-container img {
-    margin: 0 !important;
-    width: 40% !important;
-  }
-  .profile-img {
-    display: none;
+    width: 40%;
   }
 }
-@media (max-width: 550px) {
-  .watermark {
-    top: 12%;
-  }
-} 
-@media (max-width: 991px) {
-  #tnthUserBtn {
-    padding: 6px 0px;
-    height: inherit;
-  }
-  #tnthNavMain {
-    display: none !important;
-  }
-  #tnthNavXs {
-    display: block;
-  }
-  .watermark {
-    width: 270px;
-    padding: 1em;
-    font-size: 0.7em;
-    background-color: transparent;
-    color: #FFF;
-  }
-  .watermark-nowrapper {
-    font-size: 0.7em;
-  }
+@media (min-width: 641px) {
   .tnth-navbarXs-img-container img {
     width: 65%;
   } 
+}
+.profile-img {
+  display: none;
+}
+@media (min-width: 641px) {
+  .profile-img {
+    display: inline-block;
+  }
+}
+#tnthNavMain {
+  display: none;
+}
+#tnthNavXs {
+  display: block;
+}
+@media (min-width: 992px) {
+  #tnthNavMain {
+    display: block;
+  }
+  #tnthNavXs {
+    display: none;
+  }
 }
 @media(min-width: 499px) {
   #tnthLogoXs img {
@@ -431,7 +457,7 @@
 }
 @media (min-width: 1220px) {
   #tnthNavMainContainer {
-    max-width: none;
+    max-width: 100%;
   }
   .welcome-text {
     display: inline-block;
