styling fix for dropdown, negelcted to commit this change

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -134,6 +134,9 @@ small,
     font-size:@smallText;
 }
 
+.fixed-table-toolbar .dropdown-menu {
+    overflow-x: hidden;
+}
 button,
 #createUserLink,
 .btn,
