styling fixes for portal wrapper in IE, alt text for profile image fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -410,6 +410,12 @@ select:not([multiple]) {
 #mainNav {
   height: 71px;
 }
+@media all and (-ms-high-contrast: none),(-ms-high-contrast: active) {
+  /* IE10+ */
+  #mainNav {
+    height: auto;
+  }
+}
 div.right-panel {
   position:relative;
   max-width: 991px;
