--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -122,7 +122,7 @@
   z-index: 1000;
   border: none;
   position: relative;
-  min-height: 50px;
+  min-height: 72px;
   overflow: hidden;
   &:after {
     clear: both;
@@ -131,7 +131,7 @@
   }
   .tnth-navbar-toggle {
     margin: 0;
-    padding: 2px 2px 2px 20px;
+    padding: 12px 2px 2px 20px;
     position: relative;
     float: left;
     background-repeat: no-repeat;
@@ -417,6 +417,11 @@ padding: 0 6px;
 @media (min-width: 641px) {
   .profile-img {
     display: inline-block;
+  }
+  #tnthNavXs {
+    .tnth-navbar-toggle {
+      padding: 2px 2px 2px 20px;
+    }
   }
 }
 #tnthNavMain {
