minor styling fixes for ui on mobile devices

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1655,7 +1655,7 @@ input.clinic {
     margin-top: 1em;
   }
   #phoneGroup {
-    margin-top: 1em;
+    margin-top: 1.2em;
   }
   #altPhoneGroup {
     margin-top: 1.2em;
@@ -1955,7 +1955,7 @@ input.clinic {
     margin-bottom: 1em;
   }
   #profileEmailSelect {
-      width: 90%;
+      width: 280px;
       max-width: 100%;
   }
   #btnProfileSendEmail, .custom-btn {
