fix JS errors in about and privacy pages for eproms

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2241,7 +2241,6 @@ div.biopsy-option:last-of-type{
 .button--LR.data-show,
 #profileConsentList .button--LR{
    opacity: 0;
-   width: 160px;
    margin: 2em 0;
 }
 #profileConsentList .button--LR {
@@ -2458,7 +2457,7 @@ div.timezone-warning.text-warning {
   a.btn {
     font-size: @btnSize;
     max-width: 350px;
-    work-break: break-all;
+    word-break: break-all;
   }
 
   #socialMediaRegistrationContainer .btn-social,
