fix gil stylesheet syntax error

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -2662,7 +2662,7 @@ input[type="search"] {
 .checkbox-inline input[type="checkbox"] {
     position: absolute;
     margin-left: -20px;
-    margin-top: 4px;
+    margin-top: 4px \9;
 }
 .radio + .radio,
 .checkbox + .checkbox {
@@ -3500,6 +3500,7 @@ tbody.collapse.in {
     text-decoration: none;
     background-color: transparent;
     background-image: none;
+   // filter: progid: DXImageTransform.Microsoft.gradient(enabled false);
     cursor: not-allowed
 }
 .open > .dropdown-menu {
