fix visit column width in eproms patients list

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -778,6 +778,9 @@ div.search {
     opacity: 0.6;
     font-size: @smallerText;
   }
+  th.visit-field {
+    min-width: 150px;
+  }
 }
 .truenth-id-label {
    display: none;
@@ -862,7 +865,8 @@ div.search {
     word-wrap: break-word;
   }
   .email-field {
-    max-width: 250px;
+    max-width: 200px;
+    min-width: 180px;
     word-wrap: break-word;
   }
 }
